# psychoanalyze

./: .bandit  .flake8  .gitignore  .jupyterlite.doit.db  .mergify.yml  .pre-commit-config.yaml  .safety-policy.yml  .user.yml  404.html  ARCHITECTURE.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HIERARCHICAL_DEFAULT_MIGRATION.md  HIERARCHICAL_MODEL_SUMMARY.md  IMPLEMENTATION.md  LICENSE  PROJECT_SUMMARY.md  Procfile  README.md  SDT_IMPLEMENTATION_SUMMARY.md  app.json  app.py  dashboard.py  dashboard2.py  dbt_project.yaml  dbt_project.yml  demo.ipynb  environment.yml  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pixi.toml  pre-commit-config.yaml  profiles.yml  psychoanalyze.code-workspace  (+4 more)
.cursor/commands/: commit.md  describe-all.md  scope-app.md
.cursor/rules/: marimo-notebooks.mdc  python-conventions.mdc
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.md  code-feedback.md  feature-request.md
.github/instructions/: marimo-notebooks.instructions.md
.github/prompts/: jj-describe-revisions.prompt.md
.github/skills/: QUICKREF.md  README.md  SUMMARY.md  d2-diagram.json
.github/skills/diagrams/: README.md  analysis-workflow.d2  data-hierarchy.d2  module-architecture.d2  psychometric-function.d2  validate_d2.py
.github/workflows/: cd.yaml  ci.yaml  colab-badge.yml  docs.yaml  draft-pdf.yml  pymc-artifacts.yml  release.yaml
API/: index.html
CONTRIBUTING/: index.html
_output/: jupyter-lite.json
_output/extensions/jupyterlab-jupytext/: package.json
_output/extensions/jupyterlab-jupytext/static/: 568.1b49b331caef88ae1665.js  remoteEntry.d5a31e3c60f4c26fa508.js
api/: index.html
contributing/: index.html
dashboard/: __init__.py  a.py  app.py  b.py  c.py  components.py  index.html  layout.py  simulate_bayes.py  simulate_ecdfs.py  simulate_sd.py  simulate_thresholds.py  test_callbacks.py  upload_util.py
dashboard/assets/: styles.css
dashboard/input/: index.html
dashboard/layout/: nav.py
dashboard/output/: index.html
dashboard/pages/: home.py  paper.py  simulate_ecdfs.py  upload.py
dashboard/pages/simulate/: bayes.py  block.py  ecdfs.py  sd.py  simulate.py  thresholds.py
dashboard/pages/upload/: index.py
dashboard/viz/: index.html
data/: blocks.csv  weber_curves.csv
docs/: API.md  CNAME  CONTRIBUTING.md  SDT.md  animation.md  api.md  contributing.md  dashboard.md  environment.md  examples.md  gen_ref_pages.py  github-issues-labeling-plan.md  hierarchical_model.md  index.md  jupyterlite.html  notebook.html  notebook.ipynb  notebooks.md  tests.md  tooling.md
docs/dashboard/: index.md  input.md  output.md  strength_duration.md  viz.md  weber.md
docs/figures/: fig1.html
docs/notebooks/: .gitignore  index.md  tutorial.ipynb
docs/overrides/: main.html
docs/reference/docs/: gen_ref_pages.md
docs/reference/psychoanalyze/: __init__.md
docs/reference/tests/: test_psychoanalyze.md
environment/: index.html
examples/: hierarchical_fitting_example.py  sampling_animation_demo.py  sdt_usage.py
mec/: pyproject.toml
models/: .gitignore  __init__.py  binomial_regression.stan  block_fits.sql  blocks.sql  dbt_fits.py  fits.py  meta.yml  overview.md  points.sql  points_predicted.sql  sessions.sql  trials.sql
models/normalized/: block_fits.sql  blocks.sql  sessions.sql
models/plots/: longitudinal_thresholds.sql  slope_ecdf.sql  strength_duration.sql  threshold_ecdf.sql
models/stage/: sessions.sql
nbs/: scratch.py
notebooks/: index.html  index.qmd  playground.ipynb  tutorial.html  tutorial.ipynb  tutorial.qmd  tutorial_trials.csv
notebooks/gescheider/: _quarto.yml  chapter2.qmd  chapter3.qmd  chapter4.qmd  chapter5.qmd  chapter6.qmd  chapter7.qmd  chapter9.qmd
notebooks/gescheider/_site/: chapter2.html  chapter3.html  chapter4.html  chapter5.html  chapter6.html  chapter7.html  chapter9.html  index.html  search.json
overrides/: main.html
paper/: index.html  paper.bib  paper.md
psychoanalyze/: __init__.py  __main__.py  amp.py  app.py  blocks.py  curve.py  data.py  detection.py  gescheider.py  layout.py  main.py  plot.py  points.py  schemas.py  session.py  sessions.py  sigmoids.py  simulate.py  stimulus.py  strength_duration.py  subjects.py  trial.py  trials.py  upload_util.py  weber.py
psychoanalyze/analysis/: __init__.py  bayes.py  ecdf.py  strength_duration.py  weber.py
psychoanalyze/dash/: __init__.py  dashboard2.py  dashboard3.py
psychoanalyze/dashboard/: __init__.py  app.py  callbacks.py  components.py  layout.py
psychoanalyze/dashboard/assets/: styles.css
psychoanalyze/data/: __init__.py  blocks.py  logistic.py  points.py  schemas.py  sessions.py  stimulus.py  subjects.py  trials.py  types.py
search/: search_index.json
src/psychoanalyze/: __init__.py  features.py  params.py  plot.py  presets.py  sigmoids.py  types.py
src/psychoanalyze/analysis/: __init__.py  bayes.py  ecdf.py  sdt.py  strength_duration.py  weber.py
src/psychoanalyze/animation/: __init__.py  plot.py  sampler.py
src/psychoanalyze/dashboard/: app.py  layout.py  utils.py
src/psychoanalyze/data/: __init__.py  blocks.py  export.py  hierarchical.py  io.py  logistic.py  points.py  sessions.py  stimulus.py  subject.py  subjects.py  trials.py  types.py
tests/: __init__.py  index.html  test_amp.py  test_animation.py  test_bayes.py  test_block.py  test_blocks.py  test_curve.py  test_dashboard.py  test_dashboard_integration.py  test_data.py  test_detection.py  test_e2e.py  test_ecdf.py  test_features.py  test_gescheider.py  test_hierarchical.py  test_plot.py  test_points.py  test_psychoanalyze.py  test_pymc_artifacts.py  test_sdt.py  test_sessions.py  test_simulate.py  test_strength_duration.py  test_trials.py  test_weber.py
tooling/: index.html
