[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "psychoanalyze"
dynamic = ["version"]
description = "A modern software library for your psychophysics data."
authors = [{ name = "Ty Schlichenmeyer", email = "t.schlic@wustl.edu" }]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["psychophysics", "neuroscience", "psychology", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Dash",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pandas ",
    "scipy ",
    "numpy ",
    "dash-bootstrap-components ",
    "statsmodels ",
    "dash ",
    "scikit-learn ",
    "pandera ",
    "gunicorn ",
    "click ",
    "typer",
    "kaleido ",
    "pyarrow ",
    "duckdb ",
]

[project.urls]
homepage = "https://psychoanalyze.io"
repository = "https://github.com/psychoanalyze/psychoanalyze"
documentation = "https://docs.psychoanalyze.io"
JupyterHub = "https://nb.psychoanalyze.io"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.envs.default.scripts]
psychoanalyze = "psychoanalyze.main:app"

[tool.hatch.envs.dev]
dependencies = [
    "pandera[mypy]",
    "mypy",
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "pytest-mock",
    "tuna",
    "ruff",
    "black",
    "python-semantic-release",
    "pytest",
    "types-pytz",
    "types-setuptools",
    "hypothesis",
    "pandas-stubs",
    "datatest",
    "dash[testing]",
]


[tool.hatch.envs.docs]
optional = true
dependencies = ["mkdocs-material", "mkdocstrings[python]"]

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "hatch build"
commit_message = "chore(release): release {version}"

[tool.semantic_release.branches.alpha]
match = "^alpha"
prerelease = true
prerelease_token = "alpha"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat",
    "fix",
    "ci",
    "docs",
    "test",
    "dash",
    "dev",
    "deps",
    "style",
    "refactor",
    "perf",
    "chore",
    "nb",
]

[tool.bandit]
targets = ["psychoanalyze/"]
skips = ["B311", "B104"]

[tool.mypy]
exclude = ['target']

[[tool.mypy.overrides]]
module = [
    'dash',
    'plotly.*',
    'dash_bootstrap_components',
    'plotly.express',
    'scipy.stats',
    'scipy.special',
    'sklearn.linear_model',
    'dash_daq',
    'datatest',
    'bambi',
    'hypothesis',
    'statsmodels.*',
    'pytz',
]
ignore_missing_imports = true

[tool.ruff]
fix = true
select = ["ALL", "CPY001"]
ignore = ["S101", "S311", "D211", "D213", "RUF002"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D100", "D103", "ANN201"]
