[project]
name = "psychoanalyze"
version = "1.0.0-alpha.1"
description = "Interactive data analysis and simulation for psychophysics."
authors = [{ name = "Ty Schlichenmeyer", email = "t.schlic@wustl.edu" }]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
keywords = ["psychophysics", "neuroscience", "psychology", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: marimo",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
urls = { JupyterHub = "https://nb.psychoanalyze.io" }
requires-python = ">=3.14"

dependencies = [
    "numpy>=1.25.0",
    "pandas>=2.0.2",
    "plotly>=5.18.0",
    "scipy>=1.10.1",
    "scikit-learn>=1.2.2",
    # "dash-bootstrap-components>=1.4.1",
    # "statsmodels>=0.14.0",
    # "dash>=2.11.1",
    # "pandera>=0.15.1",
    # "gunicorn>=20.1.0",
    # "click>=8.1.3",
    # "typer[all]>=0.9.0",
    # "kaleido==0.2.1",
    # "pyarrow>=12.0.1",
    # "duckdb>=0.8.1",
]

[project.scripts]
psychoanalyze = "psychoanalyze.main:app"

[dependency-groups]
dev = [
    "marimo>=0.19.2",
    # "pandera[mypy]>=0.15.1",
    # "mypy>=1.4.1",
    # "ipykernel>=6.24.0",
    # "ipywidgets>=8.0.7",
    # "jupyter>=1.0.0",
    # "pytest-mock>=3.11.1",
    # "tuna>=0.5.11",
    # "ruff>=0.0.280",
    # "black>=23.3.0",
    # "python-semantic-release>=8.0.2",
    # "pytest>=7.3.2",
    # "types-pytz>=2023.3.0.0",
    # "types-setuptools>=68.0.0.3",
    # "hypothesis>=6.79.0",
    # "pandas-stubs>=2.0.2.230605",
    # "datatest>=0.11.1",
    # "dash[testing]>=2.11.1",
]

docs = [
    "mkdocs-material>=9.1.21",
    "mkdocstrings[python]>=0.22.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
commit_message = "chore(release): release {version}"

[tool.semantic_release.branches.alpha]
match = "^alpha"
prerelease = true
prerelease_token = "alpha"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat",
    "fix",
    "ci",
    "docs",
    "test",
    "dash",
    "dev",
    "deps",
    "style",
    "refactor",
    "perf",
    "chore",
    "nb",
]

[tool.bandit]
targets = ["psychoanalyze/"]
skips = ["B311", "B104"]

[tool.mypy]
exclude = ['target']

[[tool.mypy.overrides]]
module = [
    'dash',
    'plotly.*',
    'dash_bootstrap_components',
    'plotly.express',
    'scipy.stats',
    'scipy.special',
    'sklearn.linear_model',
    'dash_daq',
    'datatest',
    'bambi',
    'hypothesis',
    'statsmodels.*',
    'pytz',
]
ignore_missing_imports = true

[tool.ruff]
fix = true
select = ["ALL", "CPY001"]
ignore = ["S101", "S311", "D211", "D213", "RUF002"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D100", "D103", "ANN201"]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
