[project]
name = "psychoanalyze"
version = "1.0.0-alpha.1"
description = "Interactive data analysis and simulation for psychophysics."
authors = [{ name = "Ty Schlichenmeyer", email = "t.schlic@wustl.edu" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["psychophysics", "neuroscience", "psychology", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: marimo",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
urls = { JupyterHub = "https://nb.psychoanalyze.io" }
requires-python = ">=3.14"

dependencies = [
    "altair>=5.2.0",
    "numpy>=1.25.0",
    "polars>=1.0.0",
    "patito>=0.7.0",
    "plotly>=5.18.0",
    "scipy>=1.10.1",
    "arviz>=0.18.0",
    "bambi>=0.14.0",
    "dash>=2.11.1",
    "dash-bootstrap-components>=1.4.1",
    "duckdb>=0.8.1",
    "pymc>=5.18.0",
    "pytz>=2023.3",
    # "statsmodels>=0.14.0",
    # "gunicorn>=20.1.0",
    # "click>=8.1.3",
    # "typer[all]>=0.9.0",
    # "kaleido==0.2.1",
    "ty>=0.0.14",
    "marimo[mcp]>=0.19.7",
    "pyzmq>=27.1.0",
    "google-genai>=1.61.0",
    "pydantic-ai>=1.50.0",
    "pyarrow>=23.0.0",
    "kaleido>=1.2.0",
]

[project.scripts]
psychoanalyze = "psychoanalyze.main:app"

[dependency-groups]
dev = [
    "marimo>=0.19.7",
    # "ipykernel>=6.24.0",
    # "ipywidgets>=8.0.7",
    # "jupyter>=1.0.0",
    # "pytest-mock>=3.11.1",
    # "tuna>=0.5.11",
    # "ruff>=0.0.280",
    # "black>=23.3.0",
    # "python-semantic-release>=8.0.2",
    # "pytest>=7.3.2",
    # "types-pytz>=2023.3.0.0",
    # "types-setuptools>=68.0.0.3",
    # "pandas-stubs>=2.0.2.230605",
    # "datatest>=0.11.1",
    # "dash[testing]>=2.11.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "hypothesis>=6.79.0",
]

docs = [
    "mkdocs-material>=9.1.21",
    "mkdocstrings[python]>=0.22.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
commit_message = "chore(release): release {version}"

[tool.semantic_release.branches.alpha]
match = "^alpha"
prerelease = true
prerelease_token = "alpha"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat",
    "fix",
    "ci",
    "docs",
    "test",
    "dash",
    "dev",
    "deps",
    "style",
    "refactor",
    "perf",
    "chore",
    "nb",
]

[tool.bandit]
targets = ["psychoanalyze/"]
skips = ["B311", "B104"]

[tool.ruff]
fix = true
select = ["ALL"]
ignore = ["S101", "S311", "D211", "D213", "RUF002", "CPY001"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D100", "D103", "ANN201"]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
