[tool.poetry]
name = "mec"
version = "0.1.0"
description = "Data analysis package for Missouri Ethics Commission (MEC) campaign contribution data"
authors = ["Ty Schlichenmeyer <tyschlich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
